# mobilityyy

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  build_and_run.sh  install_wsl_deps.sh  run_bettertharva_gui.sh  run_finalver_gui.sh  run_finalver_newdir.sh  run_full_stack_check.sh
docs/: P0_verification.md
docs/superpowers/plans/: 2026-04-17-round3-rover-stack.md
docs/superpowers/specs/: 2026-04-17-round3-rover-design.md
src/artpark_bringup/: CMakeLists.txt  package.xml
src/artpark_bringup/config/: apriltag.yaml  hsv_thresholds.yaml  navigation.yaml  tag_label_map.yaml
src/artpark_bringup/launch/: full_run.launch.py  sim.launch.py  teleop_verify.launch.py
src/artpark_decision/: package.xml  setup.cfg  setup.py
src/artpark_decision/artpark_decision/: edge_sampler.py  state_machine.py  tile_tracker.py
src/artpark_logger/: package.xml  setup.cfg  setup.py
src/artpark_logger/artpark_logger/: logger_node.py
src/artpark_msgs/: CMakeLists.txt  package.xml
src/artpark_msgs/msg/: EdgeSample.msg  TagEvent.msg  Thought.msg  TileEvent.msg
src/artpark_perception/: package.xml  setup.cfg  setup.py
src/artpark_perception/artpark_perception/: apriltag_handler.py  floor_logo_detector.py  obstacle_monitor.py
src/artpark_robot/: CMakeLists.txt  package.xml
src/artpark_robot/launch/: robot.launch.py
src/artpark_robot/urdf/: artpark_bot.urdf.xacro
src/grid_world/: CMakeLists.txt  package.xml
src/grid_world/worlds/: grid_world_FINAL.sdf
src/mini_r1_v1_description/: package.xml
src/mini_r1_v1_description/urdf/: gazebo_control.xacro  lidar.xacro  sensors.xacro
src/mini_r1_v1_gz/: CMakeLists.txt  package.xml
src/mini_r1_v1_gz/config/: ros_gz_bridge.yaml
src/mini_r1_v1_gz/launch/: sim.launch.py
src/rover_autonomy/: package.xml  setup.cfg  setup.py
src/rover_autonomy/resource/: rover_autonomy
src/rover_autonomy/rover_autonomy/: __init__.py  arrow_geometry.py  hsv_utils.py  safety_controller.py  state_machine_controller.py  tag_mapper.py  tag_template_matcher.py  vision_processor.py
src/rover_bringup/: CMakeLists.txt  package.xml
src/rover_bringup/config/: apriltag.yaml  hsv_thresholds.yaml  navigation.yaml  tag_map.yaml
src/rover_bringup/launch/: autonomy.launch.py  full_stack.launch.py  robot_spawn.launch.py  sim_world.launch.py
src/rover_logging/: package.xml  setup.cfg  setup.py
src/rover_logging/resource/: rover_logging
src/rover_logging/rover_logging/: __init__.py  run_logger.py
src/rover_robot/: CMakeLists.txt  package.xml
src/rover_robot/launch/: robot.launch.py
src/rover_robot/urdf/: rover.urdf.xacro
tests/: conftest.py
tests/rover_autonomy/: test_arrow_geometry.py  test_safety_and_vision_logic.py  test_safety_controller_logic.py  test_state_machine_logic.py  test_tag_mapper.py
tests/rover_logging/: test_log_row_builder.py
