<?xml version="1.0"?>
<package format="3">
  <name>grid_world</name>
  <version>0.1.0</version>
  <description>Judge-provided grid world assets packaged for colcon installation.</description>
  <maintainer email="team@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
