<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mini_r1_v1_gz</name>
  <version>0.0.0</version>
  <description>Gazebo simulation launcher for mini_r1 robot</description>
  <maintainer email="vishnuraj2003@gmail.com">Vishnuraj</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>grid_world</depend>
  <depend>mini_r1_v1_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
