<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.1.0</version>
  <description>Bringup and configuration for the Round 3 rover stack.</description>
  <maintainer email="team@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rover_autonomy</exec_depend>
  <exec_depend>rover_logging</exec_depend>
  <exec_depend>mini_r1_v1_description</exec_depend>
  <exec_depend>mini_r1_v1_gz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
