<?xml version="1.0"?>
<package format="3">
  <name>rover_robot</name>
  <version>0.1.0</version>
  <description>Robot description and spawn support for the Round 3 rover.</description>
  <maintainer email="team@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
